fp-library/tests/ui/tuple2_no_inferable_brand.stderr
error[E0284]: type annotations needed
 --> tests/ui/tuple2_no_inferable_brand.rs:9:10
  |
9 |     let _ = map(|x: i32| x + 1, (1i32, 2i32));
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type for type parameter `Brand` declared on the function `map`
  |
  = note: cannot satisfy `<(i32, i32) as Slot_cdc7cd43dac7585f<'_, _, i32>>::Marker == Val`

error[E0283]: type annotations needed
 --> tests/ui/tuple2_no_inferable_brand.rs:9:30
  |
9 |     let _ = map(|x: i32| x + 1, (1i32, 2i32));
  |             ---                 ^^^^^^^^^^^^ cannot infer type for type parameter `Brand` declared on the function `map`
  |             |
  |             required by a bound introduced by this call
  |
  = note: multiple `impl`s satisfying `(i32, i32): Slot_cdc7cd43dac7585f<'_, _, i32>` found in the `fp_library` crate:
          - impl<'a, A, First> Slot_cdc7cd43dac7585f<'a, Tuple2FirstAppliedBrand<First>, A> for (First, A)
            where A: 'a, First: 'static;
          - impl<'a, A, Second> Slot_cdc7cd43dac7585f<'a, Tuple2SecondAppliedBrand<Second>, A> for (A, Second)
            where A: 'a, Second: 'static;
note: required by a bound in `fp_library::functions::map`
 --> src/dispatch/functor.rs
  |
  |     pub fn map<'a, FA, A: 'a, B: 'a, Brand>(
  |            --- required by a bound in this function
...
  |         FA: Slot_cdc7cd43dac7585f<'a, Brand, A>, {
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `map`
